Upgrade Aeron to 1.53.1
Bump io.aeron/aeron-all from 1.21.2 to 1.53.1 and drop the explicit
org.agrona/agrona pin, since aeron-all bundles a matching Agrona. The
old pin only worked because Leiningen happened to order it ahead of the
bundled copy on the classpath.

The bundled Agrona 2.x reads jdk.internal.misc.Unsafe, so peers now need
--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED. The sun.nio.ch and
java.lang opens are no longer required and are removed.

No source changes were needed; lein check is clean and the full test
suite passes on JDK 21.